# Sanas-SDK-MCP

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: claude_desktop_config.example.json
src/sanas_mcp/: __init__.py  __main__.py  audio_jobs.py  config.py  models.py  sdk_adapter.py  server.py  snippets.py  wav_utils.py
tests/: test_offline.py
